.provarCaches/00D410000011HE0EAM/objects/rstkf__customextf__c.object
<CustomObject>
    <fields>
        <fullName>rstkf__gljetemplthlist_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Total Credits.</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljetemplthlist_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Total Debits</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljhlist_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Total Credits</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gljhlist_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Total Debits</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_allotheradjustments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Other Adjustments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_alltranstypes__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Help</inlineHelpText>
        <label>Select All Transaction Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apacheftfees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP ACH/EFT Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apachpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP ACH Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apcashpayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Cash Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apcheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apcreditcard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apeftpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP EFT Payment (General)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apothervoidedpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Other Voided Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_appaymvarianceMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Payment Variance, Multi-Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_appaymvarianceSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Payment Variance, Single Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_apvoidedcheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Voided Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_aracheftpaymbybank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR ACH/EFT Payment Reported by Bank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcashdeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Cash Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcashdepositvarianceMC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Cash Deposit Variance, Multi-Curr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcashdepositvarianceSC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Cash Deposit Variance, Single Curr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_arcredcardpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AR Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankfeesservchrgs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Fees/Service Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankgentrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank-Generated Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankreportscredcarddeposit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Reports Credit Card Deposit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_bankreportscredcardpaym__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank Reports Credit Card Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_begbankcurrcurrentbal__c</fullName>
        <label>Beginning Current Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_beghomecurrcurrentbal__c</fullName>
        <label>Beginning Current Balance in Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_companygentrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company-Generated Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_deposittrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_dispcalcbal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display Calculated Bank Balances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endbankcurrcurrentbal__c</fullName>
        <label>New Ending Current Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endbankcurrquerybal__c</fullName>
        <label>Ending Query Balance in Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endhomecurrcurrentbal__c</fullName>
        <label>New Ending Current Balance in Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endhomecurrquerybal__c</fullName>
        <label>Ending Query Balance in Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_endingchecknum__c</fullName>
        <label>Ending Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forbankdepreconcelfrmcash__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query Reconciling Bank Deposits frm Cash</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forbankdepreconcelrepbybank__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query for Reconciling Deposits Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forcheckreconcel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query for Check Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forotherpaymreconcel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query for Other Payment Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forreconcel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query for Reconciliation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_forreconcelrecbyJE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Query Reconciling Transfers Rec by JE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_fromtransaction__c</fullName>
        <label>From Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_paymtrans__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payment Transactions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcileachpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled ACH Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilearcredcardpaymonqry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled AR CC Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilecashdeponquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Cash Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilecashpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Cash Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilechecksonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilecredcardpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Credit Card paymt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconciledepositonqry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Deposits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcileeftpaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled EFT Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconcilepaymonquery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Payments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_reconciletransfadjmadeByJE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reconcile Unreconciled Transf/Adj by JE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_seltransbankcurrquerybal__c</fullName>
        <label>Sel Trans Query Balance in Bank Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_seltranshomecurrquerybal__c</fullName>
        <label>Sel Trans Query Balance in Home Curr</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_singlechecknum__c</fullName>
        <label>Single Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_singlechecknumingrid__c</fullName>
        <label>Single Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_startbankcurrquerybal__c</fullName>
        <label>Starting Query Balance in Bank Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_starthomecurrquerybal__c</fullName>
        <label>Starting Query Balance in Home Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_startingchecknum__c</fullName>
        <label>Starting Check Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_throughtransaction__c</fullName>
        <label>Through Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_transdate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_transferadjustmentsmadebyJE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfers/Adjustments Made by JE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glreconcile_transfervariances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Variances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_accountTitle__c</fullName>
        <description>Account Title</description>
        <inlineHelpText>Account Title</inlineHelpText>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Total Credits</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryd_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Total Debits</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryhList_totalCredits__c</fullName>
        <description>Total Credits</description>
        <inlineHelpText>Total Credits</inlineHelpText>
        <label>Total Credits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryhList_totalDebits__c</fullName>
        <description>Total Debits</description>
        <inlineHelpText>Total Debits</inlineHelpText>
        <label>Total Debits</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glstmtntryh_glcmp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>glstmtntryh_glcmp__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndimconsolidate_cronexpression__c</fullName>
        <description>gltxndimconsolidate_cronexpression__c</description>
        <label>Cron Expression</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxndimconsolidate_scheduleName__c</fullName>
        <description>gltxndimconsolidate_scheduleName__c</description>
        <label>Schedule Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsum_period__c</fullName>
        <description>gltxnsum_period</description>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_clearall__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Clear All Existing Before Rebuild</description>
        <label>Clear All Existing Before Rebuild</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_summarize_gltxn__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Summarize GL Transaction Data</description>
        <label>Summarize GL Transaction Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gltxnsummary_summarize_sub_gltxn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Summarize Subsidiary Company Transacti</description>
        <label>Summarize Subsidiary Company Txns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_endingbalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Ending Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_fromdate__c</fullName>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>customextf (GL Account)</relationshipLabel>
        <relationshipName>customextf7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glcmp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_gldiv__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glproj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>customextf (Fiscal Year)</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_numofrows__c</fullName>
        <label>Number of rows in Detail Display</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>25</fullName>
                    <default>true</default>
                    <label>25</label>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gti_openingbalance__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_period__c</fullName>
        <label>Period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__gti_povendcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <referenceTo>rstkf__povendcmpno__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_rtdept__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturing Department</label>
        <referenceTo>rstk__rtdept__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_socustcmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>rstkf__socustcmpno__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_sydim1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension #1</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>customextf</relationshipLabel>
        <relationshipName>customextf1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_sydim2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension #2</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>customextf (Dimension #2)</relationshipLabel>
        <relationshipName>customextf2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_sydim3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension #3</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>customextf (Dimension #3)</relationshipLabel>
        <relationshipName>customextf3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__gti_thrudate__c</fullName>
        <label>Thru Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__includebankreconciliationcolumns__c</fullName>
        <defaultValue>false</defaultValue>
        <description>includebankreconciliationcolumns</description>
        <label>Include Bank Reconciliation Columns</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__mcs_cclass__c</fullName>
        <label>Customer Class</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__mcs_custcurr__c</fullName>
        <label>Customer Currency</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__mcs_displayfinancecharges__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Display Finance Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__mcs_displaynofinancecharges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display No-Finance Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__mcs_onetimetextmessage__c</fullName>
        <label>One-time Text Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__mcs_statementdate__c</fullName>
        <label>Statement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_IncludeUnpostedBatchesOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Unposted Batches Only ?</description>
        <label>Include Unposted Sessions Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_IncludeUnpostedMemosOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Unposted Memos Only ?</description>
        <label>Include Unposted Memos Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_PostUnpostedBatchesAfterRep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Unposted Batches After Report ?</description>
        <label>Post Unposted Sessions After Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_PostUnpostedMemosAfterRepor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Post Unposted Memos After Report ?</description>
        <label>Post Unposted Memos After Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_ThroughCustomer__c</fullName>
        <description>memoregister_ThroughCustomer__c</description>
        <label>Through Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>memoregister_company__c</description>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>customextf (Company)</relationshipLabel>
        <relationshipName>customextf3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_fromDate__c</fullName>
        <description>memoregister_fromDate__c</description>
        <label>From Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_from_customer__c</fullName>
        <description>memoregister_from_customer__c</description>
        <label>From Customer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_memosource__c</fullName>
        <description>memoregister_memosource__c</description>
        <label>Memo Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Order Invoicing</fullName>
                </value>
                <value>
                    <fullName>Cash Receipts</fullName>
                </value>
                <value>
                    <fullName>AR Memo Entry</fullName>
                </value>
                <value>
                    <fullName>Finance Charge Entry</fullName>
                </value>
                <value>
                    <fullName>Upload through ARATO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_memotype__c</fullName>
        <description>memoregister_memotype__c</description>
        <label>Memo Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Debit Memo</fullName>
                </value>
                <value>
                    <fullName>Credit Memo</fullName>
                </value>
                <value>
                    <fullName>Unapplied Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__memoregister_throughDate__c</fullName>
        <description>memoregister_throughDate__c</description>
        <label>Through Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__monthlycheckregister_glperiod__c</fullName>
        <label>Period</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__monthlycheckregister_glyear__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable Fiscal Year</inlineHelpText>
        <label>Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>customextf (Year)</relationshipLabel>
        <relationshipName>monthlycheckregister01</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__monthlycheckregister_period__c</fullName>
        <description>monthlycheckregister_period__c</description>
        <label>Period</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__monthlycheckregister_year__c</fullName>
        <description>monthlycheckregister_year</description>
        <label>Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_applylimitvalue__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Apply Limit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_crsel__c</fullName>
        <label>CR Items Selected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_drsel__c</fullName>
        <label>DR Items Selected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_fromtxndate__c</fullName>
        <description>noncashtransfer_fromtxndate__c</description>
        <inlineHelpText>Transaction Dates may be needed to reduce the amount of data to be considered when performing the ‘Try Mass Apply’ and ‘Find Matches’ processes.  These dates are used to filter Debit transactions (Invoices and Debit Memos)</inlineHelpText>
        <label>From Txn Date for Debit Items</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_fromtxndateforcredit__c</fullName>
        <description>noncashtransfer_fromtxndateforcredit__c</description>
        <inlineHelpText>Transaction Dates may be needed to reduce the amount of data to be considered when performing the ‘Try Mass Apply’ and ‘Find Matches’ processes.  These dates are used to filter Credit transactions (Unapplied Cash and Credit Memos)</inlineHelpText>
        <label>From Txn Date for Credit Items</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstkf__noncashtransfer_netsel__c</fullName>
        <label>Net Selected</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>